roles migration: admin, host & client
