# api/rpc_refresh_token.go
@@ -44,7 +44,7 @@ func (server *Server) RefreshToken(ctx context.Context, req *pb.RefreshTokenRequ
 
 	accessToken, accessPayload, err := server.tokenMaker.CreateToken(
 		refreshPayload.Username,
-		refreshPayload.Role,
+		refreshPayload.Roles,
 		server.config.AccessTokenDuration,
 	)
 	if err != nil {
